--- a/config/config.json
+++ b/config/config.json
@@ -2,22 +2,25 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "praktikum_20230140134_db",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3309
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3309
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 3309
   }
 }
