--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "express": "^5.1.0",
+    "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
